--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "@builder.io/partytown": "^0.7.3",
     "gatsby": "^5.3.3",
     "gatsby-plugin-google-tagmanager": "^5.3.1",
     "react": "^18.2.0",
